# rusty_battleships

./: .gitignore  README.md
rusty_battleships/: Cargo.toml  pre-interop.txt  server_todo.org
rusty_battleships/examples/: qmlrs-demo.rs  tty-demo.rs
rusty_battleships/examples/assets/: connect_screen.qml  connect_window.qml  game_screen.qml  lobby_screen.qml  login_screen.qml  main.qml  main_window.qml
rusty_battleships/src/: board.rs  clientboard.rs  clientgame.rs  clientlobby.rs  clientstate.rs  game.rs  lib.rs  message.rs  serverstate.rs  ship.rs  timer.rs
