[package]
name = "rusty_battleships"
version = "0.0.1"
authors = ["Moritz Baumann <moritz.baumann@student.kit.edu>", "David Rieger <david.rieger@student.kit.edu>"]

[dependencies]
ansi_term = "0.7"
argparse = "0.2.1"
qmlrs = { git = "git://github.com/Landkeks/qmlrs.git" }
rand = "0.3"
time = "0.1"
net2 = "*"
byteorder = "0.4.2"
