[package]
name = "rusty_battleships"
version = "0.1.0"
authors = ["Moritz Baumann <moritz.baumann@student.kit.edu>", "David Rieger <david.rieger@student.kit.edu>", "Peter C. Bozsoky <peter.bozsoky@student.kit.edu>"]

[dependencies]
ansi_term = "0.7"
argparse = "0.2.1"
byteorder = "0.4.2"
net2 = "0.2"
qmlrs = { git = "git://github.com/Landkeks/qmlrs.git" }
rand = "0.3"
rustc-serialize = "0.3"
time = "0.1"
